# ragas-guide

./: .env.example  .gitignore  01_single_metric.py  02_full_evaluation.py  03_testset_generation.py  README.md  llm_config.py  main.py  pyproject.toml
docs/: database_fundamentals.md  docker_containers.md  git_version_control.md  machine_learning_basics.md  python_basics.md  web_api_design.md
tests/: test_docs.py
